<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TextPage">

    <LinearLayout
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#550404"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="-143dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="327dp"
            android:layout_height="226dp"
            app:srcCompat="@mipmap/logo" />

        <EditText
            android:id="@+id/tutacak"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:gravity="center"
            android:inputType="textMultiLine"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/YazılanSize"/>

        <TextView
            android:id="@+id/alinacak"
            android:layout_width="match_parent"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/YazılanSize"
            android:gravity="center"
            android:layout_height="50dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/dosyadim"
                android:layout_width="135dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:textSize="@dimen/YazılanSize"
                android:textColor="@color/textcolor"
                android:hint="@string/dosya_ad"
                android:textColorHint="#AEE63A05"
                android:gravity="center"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/kaydet"
                android:layout_width="202dp"
                android:layout_height="match_parent"
                android:background="@color/Button"
                android:text="@string/dosyaya_kaydet"
                android:textSize="@dimen/ButtonSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sfralt"
                android:layout_width="161dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/YazılanSize" />

            <Button
                android:id="@+id/dosyadanoku"
                android:layout_width="255dp"
                android:layout_height="match_parent"
                android:background="@color/Button"
                android:text="@string/dosyadan_al"
                android:textSize="@dimen/ButtonSize" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>