<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterPage">

    <LinearLayout
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#550404"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="327dp"
            android:layout_height="225dp"
            android:baselineAlignBottom="false"
            android:clickable="false"
            app:srcCompat="@mipmap/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mailtext"
                android:layout_width="46dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:lineSpacingExtra="12sp"
                android:text="@string/email"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/BaslıkSize"
                android:textStyle="bold|italic"
                android:typeface="serif"
                app:fontFamily="sans-serif-black" />

            <EditText
                android:id="@+id/mail1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:inputType="textEmailAddress"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/YazılanSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sifre"
                android:layout_width="11dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:lineSpacingExtra="12sp"
                android:text="@string/sfre"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/BaslıkSize"
                android:textStyle="bold|italic"
                android:typeface="serif"
                app:fontFamily="sans-serif-black" />

            <EditText
                android:id="@+id/sifre1"
                android:layout_width="199dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="textPassword"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/YazılanSize"
                android:textStyle="bold|italic"
                android:typeface="normal"
                app:fontFamily="sans-serif-black" />

        </LinearLayout>

        <Button
            android:id="@+id/Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Button"
            android:text="@string/s"
            android:textSize="@dimen/ButtonSize"
            android:translationY="@dimen/butonhizza" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>